--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
+    "compression": "^1.7.4",
     "connect-flash": "^0.1.1",
     "cookie-parser": "^1.4.5",
     "cosmicjs": "^3.2.48",
@@ -25,7 +26,6 @@
     "passport-local": "^1.0.0",
     "vcards-js": "^2.10.0"
   },
-  "devDependencies": {},
   "scripts": {
     "test": "asdf",
     "start": "node app.js"
